pr: quickfixed objectset traversal order for .NET